client/src/styles/partials/_main.scss
.nav-item {
    text-transform: uppercase;
}

.nav-link {
    border-bottom: solid transparent 2px;
    display: inline-block;
}

.nav-link.active {
    border-color: $primary;
}

body {
    border-radius: var(--bs-border-radius-sm) !important;
    margin: 0.5rem !important;
    background-color: $blue !important;
}

.creator {
    border: 2px solid var(--bs-body-color);
    border-radius: 1.5rem;
    width: 2rem;
    height: 2rem;
    padding: 0 0.2rem;
    cursor: pointer;
    flex-grow: 0;
    flex-shrink: 0;

    .creator-inner {
        width: 2rem;
        height: 1.6rem;
        display: table-cell;
        vertical-align: middle;
        text-align: center;
    }
}

@include media-breakpoint-down(md) {
    .navbar-collapse {
        max-height: calc(100vh - 78px);
        overflow-y: auto;
    }
}

.alert-link {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    line-clamp: 2;
    -webkit-box-orient: vertical;
}

